// Copyright (c) 2015, Google Inc.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";
option java_package = "com.system.messenger";
option java_outer_classname = "MessengerProto";

service Messenger {
  // Immediately returns an message of a request.
  rpc GetMessageUnary(MessageRequest) returns (MessageResponse) {}

  // Send message as a request and receive message from server as response stream.
  rpc GetMessageServerStream(MessageRequest) returns (stream MessageResponse) {}

  // Send message as stream and receive message from server as a response
  rpc GetMessageClientStream(stream MessageRequest) returns (MessageResponse) {}

  // Send message as stream and receive message from server as response stream
  rpc GetMessageClientServerStream(stream MessageRequest) returns (stream MessageResponse) {}
}

message MessageRequest {
  // The text of a message request
  string text = 1;
}

message MessageResponse {
  // The text of a message response.
  string text = 1;
}